<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.requerimientos.login.Reservar" >

    <TextView
        android:id="@+id/txtCoinc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/title_reservar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtCoincidencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCoinc1"
        android:layout_below="@+id/txtCoinc1"
        android:layout_marginTop="15dp"
        android:text="@string/cantidad_personas" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputCantPersonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCoincidencias"
        android:layout_below="@+id/txtCoincidencias"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtCoinc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputCantPersonas"
        android:layout_below="@+id/inputCantPersonas"
        android:layout_marginTop="32dp"
        android:text="@string/fecha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputFechaPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCoinc2"
        android:layout_below="@+id/txtCoinc2"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/txtCoinc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCoinc2"
        android:layout_below="@+id/txtCoinc2"
        android:text="@string/formato_fecha" />

    <TextView
        android:id="@+id/txtPrecioReservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCoinc4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="$0000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnContinuar"
        android:layout_alignBottom="@+id/btnContinuar"
        android:layout_alignRight="@+id/txtCoinc3"
        android:text="@string/regresar" />

    <TextView
        android:id="@+id/txtCoinc4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputFechaPartida"
        android:layout_below="@+id/inputFechaPartida"
        android:layout_marginTop="20dp"
        android:text="@string/precio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPrecioReservar"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@+id/txtCoinc2"
        android:text="@string/continuar" />

</RelativeLayout>