<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.requerimientos.login.Mostrar_Destino" >
<!--  Temo que los graficos se caigan -->
    <TextView
        android:id="@+id/txtNombreDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="Nombre del destino"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombreDestino"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:src="@drawable/ic_action_camera" />

    <TextView
        android:id="@+id/txtLugarHospedaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtHoraCheckin"
        android:layout_below="@+id/txtHoraCheckin"
        android:layout_marginTop="22dp"
        android:text="Lugar de Hospedaje"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtPrecioPersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLugarHospedaje"
        android:layout_below="@+id/txtLugarHospedaje"
        android:layout_marginTop="30dp"
        android:text="@string/precio_destino"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPrecioPersona"
        android:layout_below="@+id/txtPrecioPersona"
        android:layout_marginTop="21dp"
        android:text="@string/oferta"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtOferta"
        android:layout_below="@+id/txtOferta"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/regresar" />

    <Button
        android:id="@+id/btnReservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRegresar"
        android:layout_alignBottom="@+id/btnRegresar"
        android:layout_toRightOf="@+id/txtPrecioPersona"
        android:text="@string/title_activity_reservar" />

    <TextView
        android:id="@+id/txtDetallesH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageFoto"
        android:layout_marginTop="28dp"
        android:layout_toRightOf="@+id/txtOferta"
        android:text="Detalles de la habitación" />

    <TextView
        android:id="@+id/txtMostarPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtOferta"
        android:layout_alignRight="@+id/txtNombreDestino"
        android:text="$100" />

    <TextView
        android:id="@+id/txtMostarHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/txtDetallesH"
        android:text="8:00pm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtMostarOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtOferta"
        android:layout_alignBottom="@+id/txtOferta"
        android:layout_alignRight="@+id/txtMostarHora"
        android:text="(si aplica)" />

    <TextView
        android:id="@+id/txtHoraCheckin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtMostarHora"
        android:text="@string/hora_checkin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>